[tool.poetry]
name = "spark-job"
version = "0.1.0"
description = "Spark job that extracts topics from dataset using Top2Vec"
authors = ["Mikhail Elenskii <elenskii-mikhail@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyspark = "^3.2.1"
pyarrow = "^8.0.0"
event-detection = {git = "https://github.com/news-events-miner/event-detection.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
